修改 加密类